# Hoban_SafeAI

./: .gitignore  AI기반위험성평가지원시스템_리서치.md  Ai기반 건설업 작업위험성평가 지원 시스템 심층 보고서.md  CLAUDE.md  HOBAN 브랜드 컬러  색상 가이드.txt  전사 하위공종 위험요인_20260518.xlsx
_workspace/04_build/backend/: .env.example  Dockerfile  README.md  pyproject.toml
_workspace/04_build/backend/app/: __init__.py  config.py  errors.py  main.py
_workspace/04_build/backend/app/adapters/: __init__.py  erp_adapter.py  kb_client.py
_workspace/04_build/backend/app/data/: guardrail_gap_areas.json
_workspace/04_build/backend/app/middleware/: __init__.py  auth.py  logging.py
_workspace/04_build/backend/app/outbox/: __init__.py  worker.py
_workspace/04_build/backend/app/routes/: __init__.py  citations.py  dynamic_risk.py  feedback.py  health.py  kb.py  sessions.py
_workspace/04_build/backend/app/schemas/: __init__.py  models.py
_workspace/04_build/backend/app/services/: __init__.py  claude_client.py  domain_postprocess.py  gap_guardrail.py  kb_store.py  llm_client.py  rag_pipeline.py  reindex.py  security_gate.py  session_store.py
_workspace/04_build/backend/app/services/dynamic_risk/: __init__.py  grid.py  providers.py  schemas.py
_workspace/04_build/backend/tests/: conftest.py  test_api_flow.py  test_dynamic_risk.py  test_erp_outbox.py  test_gap_guardrail.py  test_kb_citations.py  test_kb_crud.py  test_kb_reindex.py  test_llm_client.py  test_postprocess.py  test_security_gate.py  test_session_state_machine.py
_workspace/04_build/backend/tests/fixtures/: test_bm25_index.pkl  test_chunks.jsonl
(+196 files in other folders)
